// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloudflareImageLoader > should return a new ImageLoader instance 1`] = `
ImageLoader {
  "imageID": 1,
  "imageTable": "Group_Photos",
  "imageURL": "i/Group_Photos?r=1",
  "pathname": "i",
  "transforms": {
    "quality": 80,
    "width": 300,
  },
}
`;

exports[`DevCloudflareImageLoader > should return a new ImageLoader instance 1`] = `
DevImageLoader {
  "imageID": 1,
  "imageTable": "Group_Photos",
  "imageURL": "http://localhost:3000/i/Group_Photos?r=1",
  "pathname": "i",
  "transforms": {
    "quality": 80,
    "width": 300,
  },
}
`;
